[metadata]
name = tlsmate
version = file: tlsmate/_version.py
author = Jens Guballa
author_email = jens@guballa.de
url = https://gitlab.com/guballa/tlsmate
description = Simulate a TLS client and scan a TLS server
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
platform = any
keywords = tls client simulator scan scanner server
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://gitlab.com/guballa/tlsmate/issues
    Changelog = https://gitlab.com/guballa/tlsmate/-/blob/master/CHANGELOG.rst
    Source = https://gitlab.com/guballa/tlsmate

[options]
packages = find:
package_dir =
    =.
zip_safe = True
python_requires = >= 3.6, <4
include_package_data = False
setup_requires =
    wheel
    setuptools >= 42
tests_require =
    pytest
    pytest-cov
install_requires =
    importlib_metadata;python_version<'3.8'
    dataclasses;python_version<'3.7'
    cryptography>=3.3
    pyyaml
    pathlib
    pem
    configparser
    marshmallow
    marshmallow_oneofschema
    colorama
    gmpy2
    requests

[options.extras_require]
dev =
    wheel
    pytest
    pytest-cov
    black==19.10b0
    flake8
    sphinx
    sphinx-argparse
    tox
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    tlsmate = tlsmate.command:main


[flake8]
max-line-length = 88
ignore = E203, W503

[tox:tox]
envlist = py36, py37, py38

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest --cov=tlsmate

[coverage:run]
branch = true
source = tlsmate
omit =
    */_version.py

[tool:pytest]
log_cli = true
log_cli_level = error
